--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
-    "start": "npx tailwindcss -i ./src/style.css -o ./public/style.css --watch"
+    "start": "npx tailwindcss -i ./src/style.css -o ./docs/style.css --watch"
   }
 }
